@@ -1,4 +1,4 @@
-version = "0.9.7-pre"
+version = "0.9.7"
 
 if __name__ == "__main__":
     print version
